<resources>
    <string name="app_name">myCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="u221a">√</string>
    <string name="c">C</string>
    <string name="u00f7">÷</string>
    <string name="u00d7">×</string>
    <string name="u00b1">±</string>
    <string name="deciaml">.</string>
    <string name="percent">%</string>
    <string name="sub">-</string>
    <string name="add">+</string>
    <string name="equal">=</string>
</resources>
